# BybitBot

./: .gitignore  Bot.cpp  Bot.hpp  Bybit.cpp  Bybit.hpp  CMakeLists.txt  README.md  bybit.cpp  conanfile.py  config.json
.github/workflows/: linux_x64.yml  macos_arm.yml  macos_x64.yml
Utils/: Logger.hpp  Utils.hpp
profiles/: linux_x64  mac_arm  mac_x64
scripts/: install_conan.sh  prepare_linux_x64.sh  prepare_macos_arm.sh  prepare_macos_x64.sh
